# procedural-terrain-generation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  GALLERY.md  LICENSE  README.md  vcpkg.json
.github/workflows/: Ubuntu.yml  Windows.yml
assets/shaders/gpu_terrain/: fragment_shader.fs  tess_control_shader.tcs  tess_eval_shader.tes
assets/shaders/heightmap/: heightmap.glsl
assets/shaders/skybox/: fragment_shader.fs  vertex_shader.vs
assets/shaders/water/: fragment_shader.fs  vertex_shader.vs
assets/textures/: .gitignore  source_textures.txt
cmake/: fetchvcpkg.cmake
data/shaders/: vertex_shader.vs
data/shaders/cpu_terrain/: fragment_shader.fs
data/shaders/gpu_terrain/: fragment_shader.fs  tess_control_shader.tcs  tess_eval_shader.tes  vertex_shader.vs
data/shaders/heightmap/: heightmap.cs  normalmap.cs
data/shaders/skybox/: vertex_shader.vs
data/shaders/water/: fragment_shader.fs  vertex_shader.vs
scripts/: cubemap.py  prepare_assets.py  resize.py
src/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  hermite.cpp  hermite.hpp  image.cpp  image.hpp  image.inl  imagetexture.cpp  imagetexture.hpp  imagetexture.inl  light.hpp  main.cpp  mesh.cpp  mesh.hpp  meshgeneration.cpp  meshgeneration.hpp  noisegeneration.cpp  noisegeneration.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp  texture.inl  water.cpp  water.hpp
